mono.gram
<Atom>          ::= LeftParen <Expr> RightParen
                | Integer
                | Float
                | Identifier

<Power>         ::= <Atom>
                | <Atom> [Pow <Factor>] *

<Factor>        ::= <Power>
                | Sub <Factor>
                | Add <Factor>

<Term>          ::= <Factor>
                | <Factor> [Mul <Factor>] *
                | <Factor> [Div <Factor>] *
                | <Factor> [Mod <Factor>] *

<Expr>          ::= <Term>
                | <Term> [Add <Term>] *
                | <Term> [Min <Term>] *

<Comparison>    ::= <Expr>
                | <Expr> LessThan <Expr>
                | <Expr> [LessThanEq <Expr>] *
                | <Expr> [Greater <Expr>] *
                | <Expr> [GreaterEq <Expr>] *
                | <Expr> [Equals <Expr>] *
                | <Expr> [NotEquals <Expr>] *

<BoolFactor>    ::= <BoolAtom>
                | Not <Comparison>

<BoolTerm>      ::= <BoolFactor> 
                | <BoolFactor> [And <BoolFactor>] *

<BoolExpr>      ::= <BoolTerm>
                | <BoolTerm> [Or <BoolTerm>] *

<Block>         ::= LeftCurly <Program> RightCurly

<Assignment>    ::= Identifier Assignment <Expr>

<If>            ::= If <BoolExpr> <Block> [Else <Block>]>

<While>         ::= While <BoolExpr> <Block>

<Statement>     ::= Let <Assignment>
                | <Assignment>
                | <BoolExpr>
                | <If>
                | <While>

<Program>       ::= <Statement> 
                | <Statement> [NewLine <Statement>] * 
